# Ledgrithm

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/core/: config.py
backend/app/db/: database.py
backend/app/db/models/: user.py
