[project]
name = "Ledgrithm"
version = "0.1.0"
description = "Цифровой скелет вашей финансовой системы"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.5.1",
    "fastapi[standard]>=0.115.12",
    "pydantic-settings>=2.9.0",
    "python-dotenv>=1.1.0",
    "redis>=5.2.1",
    "sqlalchemy[asyncio]>=2.0.40",
    "uvicorn[standard]>=0.34.1",
]
